# ai-hackathon-pre

./: .tool-versions  20250325.ipynb  CNAME  README.md  audio_processing.py  docker-compose.yaml  emotion_recognition.py  game_interface.py  memo.md  pyproject.toml  requirements.txt  test_system.py
.github/workflows/: deploy-gh-pages.yaml
backend/: audio.py  main.py  test.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  env.ts  main.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/const/: index.ts
frontend/src/context/: GameContext.tsx
frontend/src/features/audio/: AudioPage.tsx  index.ts
frontend/src/features/audio/components/: AudioVisualizer.tsx  ResultCard.tsx  ScoreAnimation.tsx  index.ts
frontend/src/features/home/: HomePage.tsx
frontend/src/hooks/: useAudio.ts  useRecordAudio.ts  useUploadAudio.ts
frontend/src/lib/: axios.ts  result.ts
lab/: 20250325.ipynb  Dockerfile  docker-compose.yaml  movie.ipynb
